--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1,5 +1,16 @@
 {
- "cells": [
+"cells": [
+{
+  "cell_type": "markdown",
+  "metadata": {},
+  "source": [
+    "## Preparing the Environment\n",
+    "\n",
+    "#### **1.0 Import Libraries**\n",
+    "- **Pandas** - Data manipulation and handling\n",
+    "- **Numpy** - Numerical operations and calculations\n"
+  ]
+},
   {
    "cell_type": "code",
    "execution_count": 2,
@@ -11,6 +22,13 @@
     "import pandas as pd\n",
     "import numpy as np"
    ]
+  },
+  {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+      "\n#### **2.0 Data Loading and Exploration**\n"
+    ]
   },
   {
    "cell_type": "code",
