--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TMDB Movie Analysis: Exploring the Most Popular Movies, Highest Grossing Movies, and More!\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "How do we know if a certain movie is destined to be a Box Office success, or a Box Office flop?\n",
+    "\n",
+    "Is it the **million dollar casts** (\"Tom Hanks\", \"Chris Pratt\")? Could it be the **visionary director** (\"J.J. Abrams\", \"James Wan\")? What about the **genres** (Action, Adventure, Thriller)?\n",
+    "\n",
+    "In this analysis, we set out to analyze TMDB movie dataset to get insights and answer all our burning curiousity. \n",
+    "\n",
+    "The dataset is from [Kaggle: 5000 Movie Dataset](https://www.kaggle.com/tmdb/tmdb-movie-metadata) and contains information about 10,867 movies collected from The Movie Database (TMDb), including popularity, revenue, budget, cast and genres. \n",
+    "\n",
+    "_(This analysis is a case study in the Udacity Data Analyst Nanodegree Program.)_\n",
+    "\n",
+    "## Table of Contents\n",
+    "\n",
+    "<ul>\n",
+    "<li><a href=\"#ask questions\">Asking Questions</a></li>\n",
+    "<li><a href=\"#wrangling\">Data Wrangling</a></li>\n",
+    "<li><a href=\"#eda\">Exploratory Data Analysis</a></li>\n",
+    "<li><a href=\"#conclusions\">Conclusions</a></li>\n",
+    "</ul>\n",
+    "\n",
+    "\n",
+    "***\n",
+    "<a id='ask questions'></a>\n",
+    "## Asking Questions\n",
+    "\n",
+    "Based on dataset, we are interested to know:\n",
+    "\n",
+    "- Q1: Does having a higher budget results in a higher revenue and profit?\n",
+    "- Q2: Which genres are associated with high popularity?\n",
+    "- Q3: Which director produces the highest revenue movies?\n",
+    "- Q4: Which actor is associated with higher popularity and revenue profit?\n",
+    "- Q5: Which year produced movies with highest grossing revenue?\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "1dce74f0-0969-4d42-8af8-9796daff6427",
