--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# Walmart: Data Cleaning and Wrangling\n",
     "\n",
-    "***"
+    "***",
+    "## 1.0 Import Libaries\n",
+    "- pandas -> Manipulation and handling of missing data",
+    "- numpy -> Perform numerical operations and calculations",
+    "- matplolib.pyplot -> Create graphs/ charts for exploratory analysis",
+    "- seaborn -> To create visualizations",
    ]
   },
   {
