--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -11,7 +11,7 @@
     "- pandas -> Manipulation and handling of missing data",
     "- numpy -> Perform numerical operations and calculations",
     "- matplolib.pyplot -> Create graphs/ charts for exploratory analysis",
-    "- seaborn -> To create visualizations",
+    "- seaborn -> To create visualizations"
    ]
   },
   {
