--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "***",
     "## 1.0 Import Libaries\n",
-    "- pandas -> Manipulation and handling of missing data",
-    "- numpy -> Perform numerical operations and calculations",
-    "- matplolib.pyplot -> Create graphs/ charts for exploratory analysis",
+    "- pandas -> Manipulation and handling of missing data\n",
+    "- numpy -> Perform numerical operations and calculations\n",
+    "- matplolib.pyplot -> Create graphs/ charts for exploratory analysis\n",
     "- seaborn -> To create visualizations"
    ]
   },
