--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "***",
     "\n",
-    "## 1.0 Import Libaries\n",
+    "### 1.0 Import Libaries\n",
     "- pandas -> Manipulation and handling of missing data\n",
     "- numpy -> Perform numerical operations and calculations\n",
     "- matplolib.pyplot -> Create graphs/ charts for exploratory analysis\n",
