--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -30,6 +30,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.0 Loading the Data and Exploration\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "f51e3786-5d2b-4502-a2ee-9782b15a752d",
