--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -251,6 +251,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.0 Handling Null and Missing Values\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "e2657a3c-490f-4c55-9367-09c573fd1750",
