--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -332,7 +332,16 @@
      "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
-    }
+    },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Null Check Observation:\n"
+    "- Dataset does not contain any null values\n"
+    "- No imputation/ removal of data is required\n"
+   ]
+  }
    ],
    "source": [
     "# Checking for duplicates\n",
