--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -318,6 +318,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Null Check Observation:\n"
+    "- Dataset does not contain any null values\n"
+    "- No imputation/ removal of data is required\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "5f1340d1-d72a-4d51-86c4-58cee6ddfb6a",
