--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -317,6 +317,15 @@
     "df.isnull().sum()"
    ]
   },
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Null Values Check:\n",
+    "- Dataset does not contain any null values\n",
+    "- No further handling/ imputation is required\n"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 30,
