--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Null Values Check:\n",
+    "##### Null Values Check:\n",
     "- Dataset does not contain any null values\n",
     "- No further handling/ imputation is required\n"
    ]
