--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -260,8 +260,7 @@
     "\n",
     "### 3.0 Handling Null and Missing Values\n"
     "\n",
-    "#### 3.1 Null Values Check\n",
-    "Here, I'll be using isnull().sum() to check for total number of null values in the data set and isnull.any() to check each column for if the function returns True.\n"
+    "#### 3.1 Null Values Check\n"
    ]
   },
   {
