--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -284,6 +284,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***",
+    "\n",
+    "### 3.0 Handling Null and Missing Values\n"
+    "\n",
+    "#### 3.1 Null Values Check\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "7e5344b7-ecca-4f48-b444-5da5002a5604",
