--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "***",
     "\n",
-    "### 3.0 Handling Null and Missing Values\n"
+    "### 3.0 Handling Null and Missing Values\n",
     "\n",
     "#### 3.1 Null Values Check\n"
    ]
