--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -260,7 +260,8 @@
     "\n",
     "### 3.0 Handling Null and Missing Values\n",
     "\n",
-    "#### 3.1 Null Values Check\n"
+    "#### 3.1 Null Values Check\n",
+    "Here I use isnull.sum() to check for total number of null values and isnull.any() to filter out any null values, a null value would return as True.\n"
    ]
   },
   {
