Revert "Update walmart_analytics.ipynb"
This reverts commit 61e01609ea013730d0476e35fd01d9f7b2b63635.

--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -388,6 +388,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Duplicate Values Observation:\n",
+    "- No duplicate values are found in any rows of the dataset.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "5dab0473-ea8f-479e-b6d7-88095ed5496d",
