--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -330,17 +330,7 @@
    "source": [
     "##### Null Values Check:\n",
     "- Dataset does not contain any null values\n",
-    "- No further handling/ imputation is required\n",
-    "***",
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "#### 3.2 Duplicate Values Check\n",
-    "Here I use duplicated().any() to check for any check for any duplicated rows in the dataset.\n"
+    "- No further handling/ imputation is required\n"
    ]
   },
   {
@@ -385,15 +375,6 @@
    ],
    "source": [
     "df.duplicated().any()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "##### Duplicate Values Observation:\n",
-    "- No duplicate values are found in any rows of the dataset.\n"
    ]
   },
   {
