--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -334,6 +334,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***",
+    "\n",
+    "#### 3.2 Duplicate Values Check\n",
+    "Here, duplicated.any() is used to return a boolean value if there are any duplicate rows.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "5f1340d1-d72a-4d51-86c4-58cee6ddfb6a",
