--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -388,6 +388,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***",
+    "\n",
+    "##### Duplicated Values Observation\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "5dab0473-ea8f-479e-b6d7-88095ed5496d",
