--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -391,9 +391,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***",
     "\n",
-    "##### Duplicated Values Observation\n"
+    "##### Duplicated Values Observation\n",
+    "- No duplicated rows are found in the dataset\n"
    ]
   },
   {
