--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -392,8 +392,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### Duplicated Values Observation\n",
-    "- No duplicated rows are found in the dataset\n"
+    "#### Duplicated Values Observation\n",
+    "- No duplicated rows are found in the dataset\n",
+    "\n",
+    "\n",
+    "#### Dataset Observation\n"
    ]
   },
   {
