--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -428,12 +428,18 @@
     }
    ],
    "source": [
-    "# Dataset observation\n",
-    "# There are 6435 rows and 8 columns in the dataset \n",
-    "# Columns 'Store' and 'Holiday_Flag' are of integer data type\n",
-    "# Date is of object data type which will be converted to datetime format for further analysis\n",
-    "# All other columns are of float data type\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Dataset Observations\n",
+    "- There are 6435 rows and 8 columns\n",
+    "- Columns 'Store' and 'Holiday_Flag' are of integer data type\n",
+    "- Date is of object data type which will be converted to datetime format for further analysis\n"
    ]
   },
   {
