--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -437,9 +437,19 @@
    "source": [
     "\n",
     "#### Dataset Observations\n",
-    "- There are 6435 rows and 8 columns\n",
-    "- Columns 'Store' and 'Holiday_Flag' are of integer data type\n",
-    "- Date is of object data type which will be converted to datetime format for further analysis\n"
+    "- There are 6435 rows and 8 columns.\n",
+    "- Columns 'Store' and 'Holiday_Flag' are of integer data type.\n",
+    "- Weekly_Sales, Temperature, Fuel_Price, CPI, Unemployment are float data type.\n",
+    "- Date is object data type which will be converted to datetime format for further analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### 4.0 Changing Date format\n",
+    "to_datetime is used on the Date column to convert its datatype to date time. Format is also converted to 'YYYY-MM-DD'.\n"
    ]
   },
   {
