--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -498,6 +498,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Extracting Year, Month and Day from the Date column to enable time-series analysis.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "1ebb3a8f-e809-46a7-b5da-e121a9a983c9",
