--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -522,6 +522,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "***",
+    "\n",
+    "#### 5.0 Outlier Detection\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "101256a1-d121-4fae-8fc7-1044c8c0a75d",
