--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -642,6 +642,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Outlier Observations:\n"
+    "- Unemployment has the highest outlier percentage of 7.47%\n",
+    "- Weekly_Sales has an outlier percentage of 0.53%, possibly due to sales spikes during the holiday seasons.\n",
+    "- Given the context of this analysis, no outliers will be removed.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "***",
+    "\n",
+    "#### 6.0 Statistical Summary:\n",
+    "Summary statistics of the dataset.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "744e73bf-e6fd-420b-b023-01d11afbf140",
