--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -646,7 +646,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### Outlier Observations:\n"
+    "##### Outlier Observations:\n",
     "- Unemployment has the highest outlier percentage of 7.47%\n",
     "- Weekly_Sales has an outlier percentage of 0.53%, possibly due to sales spikes during the holiday seasons.\n",
     "- Given the context of this analysis, no outliers will be removed.\n"
