--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -450,7 +450,7 @@
     "\n",
     "***",
     "\n",
-    "#### 4.0 Changing Date format\n",
+    "### 4.0 Date Format Standardization\n",
     "to_datetime is used on the Date column to convert its datatype to date time. Format is also converted to 'YYYY-MM-DD'.\n"
    ]
   },
@@ -528,7 +528,7 @@
     "\n",
     "***",
     "\n",
-    "#### 5.0 Outlier Detection\n"
+    "### 5.0 Outlier Detection\n"
    ]
   },
   {
@@ -659,7 +659,7 @@
     "\n",
     "***",
     "\n",
-    "#### 6.0 Statistical Summary:\n",
+    "### 6.0 Statistical Summary:\n",
     "Summary statistics of the dataset.\n"
    ]
   },
@@ -860,6 +860,20 @@
    "source": [
     "# Statistical Summary of the dataset\n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "***",
+    "\n",
+    "#### 6.0 Statistical Summary Observation:\n",
+    "##### Weekly Sales:\n",
+    "- Walmart across all stores has an average weekly sales of $1.05 million.\n",
+    "- Weekly sales range between $209,986 and $3.8 million.\n",
+    "- Based on the sales range, we can identify stores with significantly higher weekly sales.\n"
    ]
   },
   {
