--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -872,7 +872,7 @@
     "#### 6.0 Statistical Summary Observation:\n",
     "##### Weekly Sales:\n",
     "- Walmart across all stores has an average weekly sales of $1.05 million.\n",
-    "- Weekly sales range between '$209,986' and '$3.8 million'.\n",
+    "- Weekly sales range between '\\$209,986' and '\\$3.8 million'.\n",
     "- Based on the sales range, we can identify stores with significantly higher weekly sales.\n"
    ]
   },
