--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -870,10 +870,37 @@
     "***",
     "\n",
     "#### 6.0 Statistical Summary Observation:\n",
+    "\n",
     "##### Weekly Sales:\n",
     "- Walmart across all stores has an average weekly sales of $1.05 million.\n",
     "- `Weekly sales range between $209,986 and $3.8 million.`\n",
-    "- Based on the sales range, we can identify stores with significantly higher weekly sales.\n"
+    "- Based on the sales range, we can identify stores with significantly higher weekly sales.\n",
+    "\n",
+    "\n",
+    "##### Holiday Flag:\n",
+
+    "\n",
+    "\n",
+    "##### Temperature:\n",
+
+    "\n",
+    "\n",
+    "##### Fuel Price:\n",
+
+    "\n",
+    "\n",
+    "##### Consumer Price Index (CPI):\n",
+
+    "\n",
+    "\n",
+    "##### Unemployment:\n",
+
+    "\n",
+    "\n",
+    "##### Store\n",
+
+    "\n",
+    "\n",
    ]
   },
   {
