--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -876,25 +876,7 @@
     "- `Weekly sales range between $209,986 and $3.8 million.`\n",
     "- Based on the sales range, we can identify stores with significantly higher weekly sales.\n",
     "\n",
-    "\n",
-    "##### Holiday Flag:\n",
-    "\n",
-    "\n",
-    "##### Temperature:\n",
-    "\n",
-    "\n",
-    "##### Fuel Price:\n",
-    "\n",
-    "\n",
-    "##### Consumer Price Index (CPI):\n",
-    "\n",
-    "\n",
-    "##### Unemployment:\n",
-    "\n",
-    "\n",
-    "##### Store\n",
-    "\n",
-    "\n"
+    "##### Holiday Flag:\n"
    ]
   },
   {
