--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -646,7 +646,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### Outlier Observations:\n",
+    "##### Outlier Observation:\n",
     "- Unemployment has the highest outlier percentage of 7.47%\n",
     "- Weekly_Sales has an outlier percentage of 0.53%, possibly due to sales spikes during the holiday seasons.\n",
     "- Given the context of this analysis, no outliers will be removed.\n"
@@ -873,10 +873,28 @@
     "\n",
     "##### Weekly Sales:\n",
     "- Walmart across all stores has an average weekly sales of $1.05 million.\n",
-    "- `Weekly sales range between $209,986 and $3.8 million.`\n",
+    "- `Weekly sales ranges between $209,986 and $3.8 million.`\n",
     "- Based on the sales range, we can identify stores with significantly higher weekly sales.\n",
     "\n",
-    "##### Holiday Flag:\n"
+    "##### Holiday_Flag:\n",
+    "- Approximately, 7% of the data corresponds to holiday weeks.\n",
+    "- The remainder 93% is data corresponding to non-holiday weeks. This will be confirmed later during exploratory analysis.\n",
+    "\n",
+    "##### Temperature:\n",
+    "- Temperature ranges between -2.06°F and 100.1°F\n",
+    "- Temperature ranges indicates stores from colder to hotter regions.\n",
+    "\n",
+    "##### Fuel_Price:\n",
+    "- Fuel Price ranges between $2.47 and $4.46 which can impact transportation csots and purchasing behavior among consumers.\n",
+    "\n",
+    "##### Consumer Price Index (CPI):\n",
+    "- CPI Ranges between 126.06 and 227.23, indicating inflation trends across different time periods.\n",
+    "\n",
+    "##### Unemployment:\n",
+    "- Unemployment levels ranges between 3.88% and 14.3%, suggesting economic trends affecting consumer purchasing power.\n",
+    "\n",
+    "##### Store:\n",
+    "- Store IDs range from 1 to 45, confirming 45 stores in the dataset.\n"
    ]
   },
   {
