--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -885,7 +885,7 @@
     "- Temperature ranges indicates stores from colder to hotter regions.\n",
     "\n",
     "##### Fuel_Price:\n",
-    "- Fuel Price ranges between $2.47 and $4.46 which can impact transportation csots and purchasing behavior among consumers.\n",
+    "- `Fuel Price ranges between $2.47 and $4.46 which can impact transportation csots and purchasing behavior among consumers.`\n",
     "\n",
     "##### Consumer Price Index (CPI):\n",
     "- CPI Ranges between 126.06 and 227.23, indicating inflation trends across different time periods.\n",
