--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -894,7 +894,16 @@
     "- Unemployment levels ranges between 3.88% and 14.3%, suggesting economic trends affecting consumer purchasing power.\n",
     "\n",
     "##### Store:\n",
-    "- Store IDs range from 1 to 45, confirming 45 stores in the dataset.\n"
+    "- Store IDs range from 1 to 45, confirming 45 stores in the dataset.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.0 Exploratory Data Analysis",
+    "#### Question: What percentage of weekly sales are from both holiday and non-holiday weeks?"
    ]
   },
   {
