--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -902,8 +902,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.0 Exploratory Data Analysis",
-    "#### Question: What percentage of weekly sales are from both holiday and non-holiday weeks?"
+    "### 7.0 Exploratory Data Analysis\n",
+    "\n",
+    "#### Question: What percentage of weekly sales are from both holiday and non-holiday weeks?\n"
    ]
   },
   {
@@ -960,6 +961,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Question: What is the sales distribution for all store across all months?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "bfa0fd55-9dfc-43dd-b987-4a11cee60886",
@@ -985,6 +994,17 @@
     "plt.ylabel('Weekly Sales', fontsize=10)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Obervation:\n",
+    "- December has the longest tail reaching more than $4 million indicating a sales spike during the holiday season Christmas.\n",
+    "- July to October have median values around $1 million, indicating less variability and stability in sales.\n",
+    "- `January has appears to be the lowest-sales month with it lower-bound around $500 thousand and median under $1 million.`\n"
    ]
   },
   {
