--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -904,7 +904,7 @@
    "source": [
     "### 7.0 Exploratory Data Analysis\n",
     "\n",
-    "#### Question: What percentage of weekly sales are from both holiday and non-holiday weeks?\n"
+    "##### Question: What percentage of weekly sales are from both holiday and non-holiday weeks?\n"
    ]
   },
   {
@@ -964,8 +964,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***",
     "\n",
-    "#### Question: What is the sales distribution for all store across all months?\n"
+    "##### Question: What is the sales distribution for all store across all months?\n"
    ]
   },
   {
@@ -1001,10 +1002,20 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### Obervation:\n",
+    "***",
+    "\n",
     "- December has the longest tail reaching more than $4 million indicating a sales spike during the holiday season Christmas.\n",
     "- July to October have median values around $1 million, indicating less variability and stability in sales.\n",
     "- `January has appears to be the lowest-sales month with it lower-bound around $500 thousand and median under $1 million.`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Correlation across Numeric Columns:\n",
+    "df_01 serves as a seperate dataframe to store all numerical columns to compute the correlation matrix via .corr().\n"
    ]
   },
   {
@@ -1217,6 +1228,23 @@
     "plt.title('Correlation Matrix of Numeric Columns')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Correlation Matrix Observation:\n",
+    "- Weekly_sales\n",
+    "- Holiday_Flag\n",
+    "- Temperature\n",
+    "- Fuel_Price\n",
+    "- CPI\n",
+    "- Unemployment\n",
+    "- Day\n",
+    "- Month\n",
+    "- Year\n"
    ]
   },
   {
