--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1235,16 +1235,26 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### Correlation Matrix Observation:\n",
-    "- Weekly_sales\n",
-    "- Holiday_Flag\n",
-    "- Temperature\n",
-    "- Fuel_Price\n",
-    "- CPI\n",
-    "- Unemployment\n",
-    "- Day\n",
-    "- Month\n",
-    "- Year\n"
+    "##### Correlation Matrix Observation with Weekly Sales:\n",
+    "The analysis covers correlation between the following columns and Weekly_Sales\n",
+    "\n",
+    "| Column         | Correlation with Weekly_Sales | Observation             |\n",
+    "|----------------|-------------------------------|--------------------------|\n",
+    "| Holiday_Flag   | 0.04                          | Little to no correlation |\n",
+    "| Temperature    | -0.06                         | Weak negative correlation|\n",
+    "| Fuel_Price     | 0.01                          | Little to no correlation |\n",
+    "| CPI            | -0.07                         | Very weak negative correlation |\n",
+    "| Unemployment   | -0.11                         | Weak Negative correlation, a slight drop in sales from higher unemployment. |\n",
+    "| Day            | -0.02                         | Little to no negative correlation |\n",
+    "| Month          | 0.08                          | Slight positive correlation |\n",
+    "| Year           | -0.02                         | Little to no negative correlation |\n",
+    "\n",
+    "##### Correlation Matrix Observation with other Columns:\n",
+    "The analysis covers correlation between the following columns and Weekly_Sales\n",
+    "\n",
+    "| Column 1       | Observation             | Correlation with Weekly_Sales | Observation             |\n",
+    "|----------------|-------------------------------|--------------------------|--------------------------|\n",
+    "| Holiday_Flag   | 0.04                          | Little to no correlation |\n"
    ]
   },
   {
