--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1252,12 +1252,13 @@
     "##### Correlation Matrix Observation with other Columns:\n",
     "The analysis covers correlation between the following columns and Weekly_Sales\n",
     "\n",
-    "| Column 1       | Column 2             | Correlation with Weekly_Sales | Observation             |\n",
+    "| Column 1       | Column 2             | Correlation | Observation             |\n",
     "|----------------|-------------------------------|--------------------------|--------------------------|\n",
     "| Fuel_Price   |Year                          | 0.78                     | Strong positive correlation. Fuel Prices increases throughout the year. |\n",
     "| Unemployment   |Year                          | -0.24                     | Weak negative correlation. Unemployment slightly increases throughout the year. |\n",
     "| CPI   |Unemployment                          | -0.30                     | Weak negative correlation. CPI slight drops from increasing unemployment levels. |\n",
     "| Temperature   |Month                          | 0.24                     | Weak positive correlation. Temperature slightly increases every month. |\n"
+    "\n"
    ]
   },
   {
@@ -1271,15 +1272,6 @@
     "df.to_csv(\"walmart_analytics.csv\", index=False)"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b072f75-322f-473e-a53d-6d4e5d5e4193",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python [conda env:base] *",
