Revert "Update walmart_analytics.ipynb"
This reverts commit d03160073d3e849fa3dcd6dc42df0952aedf4c7e.

--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1252,12 +1252,9 @@
     "##### Correlation Matrix Observation with other Columns:\n",
     "The analysis covers correlation between the following columns and Weekly_Sales\n",
     "\n",
-    "| Column 1       | Column 2             | Correlation with Weekly_Sales | Observation             |\n",
+    "| Column 1       | Observation             | Correlation with Weekly_Sales | Observation             |\n",
     "|----------------|-------------------------------|--------------------------|--------------------------|\n",
-    "| Fuel_Price   |Year                          | 0.78                     | Strong positive correlation. Fuel Prices increases throughout the year. |\n",
-    "| Unemployment   |Year                          | -0.24                     | Weak negative correlation. Unemployment slightly increases throughout the year. |\n",
-    "| CPI   |Unemployment                          | -0.30                     | Weak negative correlation. CPI slight drops from increasing unemployment levels. |\n",
-    "| Temperature   |Month                          | 0.24                     | Weak positive correlation. Temperature slightly increases every month. |\n"
+    "| Holiday_Flag   | 0.04                          | Little to no correlation |\n"
    ]
   },
   {
