--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1235,7 +1235,6 @@
    "metadata": {},
    "source": [
     "\n",
-<<<<<<< HEAD
     "##### Correlation Matrix Observation:\n",
     "- Weekly_sales\n",
     "- Holiday_Flag\n",
@@ -1245,8 +1244,8 @@
     "- Unemployment\n",
     "- Day\n",
     "- Month\n",
-    "- Year\n"
-=======
+    "- Year\n",
+    "\n",
     "##### Correlation Matrix Observation with Weekly Sales:\n",
     "The analysis covers correlation between the following columns and Weekly_Sales\n",
     "\n",
@@ -1271,7 +1270,6 @@
     "| CPI   |Unemployment                          | -0.30                     | Weak negative correlation. CPI slight drops from increasing unemployment levels. |\n",
     "| Temperature   |Month                          | 0.24                     | Weak positive correlation. Temperature slightly increases every month. |\n",
     "\n"
->>>>>>> parent of 5cf5b7b (Delete walmart_analytics.ipynb)
    ]
   },
   {
@@ -1284,18 +1282,8 @@
     "# Export cleaned dataset as csv for SQL and Power BI stages\n",
     "df.to_csv(\"walmart_analytics.csv\", index=False)"
    ]
-<<<<<<< HEAD
   },
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-{
-=======
   {
->>>>>>> parent of 7f97a8f (Update walmart_analytics.ipynb)
-=======
-  {
->>>>>>> parent of 7f97a8f (Update walmart_analytics.ipynb)
    "cell_type": "code",
    "execution_count": null,
    "id": "0b072f75-322f-473e-a53d-6d4e5d5e4193",
@@ -1304,15 +1292,6 @@
    "source": []
   }
  ],
-<<<<<<< HEAD
-=======
->>>>>>> parent of 3409aae (Update walmart_analytics.ipynb)
-=======
->>>>>>> parent of 7f97a8f (Update walmart_analytics.ipynb)
-=======
-  }
- ],
->>>>>>> parent of 5cf5b7b (Delete walmart_analytics.ipynb)
  "metadata": {
   "kernelspec": {
    "display_name": "Python [conda env:base] *",
