--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1247,7 +1247,7 @@
     "- Year\n",
     "\n",
     "##### Correlation Matrix Observation with Weekly Sales:\n",
-    "The analysis covers correlation between the following columns and Weekly_Sales\n",
+    "\n",
     "\n",
     "| Column         | Correlation with Weekly_Sales | Observation             |\n",
     "|----------------|-------------------------------|--------------------------|\n",
@@ -1261,7 +1261,7 @@
     "| Year           | -0.02                         | Little to no negative correlation |\n",
     "\n",
     "##### Correlation Matrix Observation with other Columns:\n",
-    "The analysis covers correlation between the following columns and Weekly_Sales\n",
+    "\n",
     "\n",
     "| Column 1       | Column 2             | Correlation | Observation             |\n",
     "|----------------|-------------------------------|--------------------------|--------------------------|\n",
@@ -1269,7 +1269,12 @@
     "| Unemployment   |Year                          | -0.24                     | Weak negative correlation. Unemployment slightly increases throughout the year. |\n",
     "| CPI   |Unemployment                          | -0.30                     | Weak negative correlation. CPI slight drops from increasing unemployment levels. |\n",
     "| Temperature   |Month                          | 0.24                     | Weak positive correlation. Temperature slightly increases every month. |\n",
-    "\n"
+    "\n",
+    "***",
+    "\n",
+    "### 8.0 Export the Data\n",
+    "\n",
+    "Export the data as csv for SQL and Power BI stages.\n"
    ]
   },
   {
@@ -1279,7 +1284,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export cleaned dataset as csv for SQL and Power BI stages\n",
     "df.to_csv(\"walmart_analytics.csv\", index=False)"
    ]
   }
