--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1015,7 +1015,7 @@
     "\n",
     "***",
     "\n",
-    "##### Correlation across Numeric Columns:\n",
+    "### Correlation across Numeric Columns:\n",
     "df_01 serves as a seperate dataframe to store all numerical columns to compute the correlation matrix via .corr().\n"
    ]
   },
