--- a/walmart_analytics.ipynb
+++ b/walmart_analytics.ipynb
@@ -1257,7 +1257,7 @@
     "|----------------|-------------------------------|--------------------------|--------------------------|\n",
     "| Fuel_Price   |Year                          | 0.78                     | Strong positive correlation. Fuel Prices increases throughout the year. |\n",
     "| Unemployment   |Year                          | -0.24                     | Weak negative correlation. Unemployment slightly increases throughout the year. |\n",
-    "| CPI   |Unemployment                          | -0.30                     | Weak negative correlation. CPI slight drops from increasing unemployment levels. |\n",
+    "| CPI   |Unemployment                          | -0.30                     | Weak negative correlation. CPI slighty drops from increasing unemployment levels. |\n",
     "| Temperature   |Month                          | 0.24                     | Weak positive correlation. Temperature slightly increases every month. |\n",
     "\n",
     "***",
